Adds endpoint to allow ERDDAP to be configured for staging

--- a/ooiui/config/config.yml
+++ b/ooiui/config/config.yml
@@ -3,4 +3,5 @@ ERDDAP_URL: http://data-test.ooi.rutgers.edu/erddap
 SERVICES_URL: http://localhost:4000
 DEBUG: False
 CACHE_TYPE: simple
+SERVICES_CONFIG: ../datasets.yml
 
